# ray-tracer-challenge

./: Cargo.toml
src/: canvas.rs  color.rs  glam.rs  main.rs  pixels.rs  pixels_winit_main.rs  prelude.rs  sdf.rs  sketch.rs  vello_main.rs  window.rs
src/crate_wrappers/: pixels.rs
src/extensions/: f32.rs  glam.rs  mod.rs
src/ray_tracer_challenge/: mod.rs  point2.rs  point2_and_vec2.rs  point3.rs  point3_and_vec3.rs  projectiles.rs  rgb.rs  size2.rs  vec2.rs  vec3.rs
