[package]
name = "vello-vs-pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# anyhow = "1.0.86"
# pixels = "0.13.0"
# pollster = "0.3.0"
# vello = "0.2.1"

[dependencies]
camino = "1.1.7"
env_logger = "0.10"
error-iter = "0.4"
glam = "0.28.0"
image = "0.25.2"
log = "0.4"
palette = "0.7.6"
pixels = "0.13.0"
tao = { version = "0.28.1", features = ["rwh_05"] }
# Pixels winit
# winit = "0.28"
# Vello
# winit = "0.30.4"
winit_input_helper = "0.14"
